# 3d-marketplace

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
services/api/: alembic.ini  pyproject.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 001_base_users_and_chat.py  002_capture_and_model_assets.py  003_products_and_chat.py  004_idempotency_keys.py  005_read_optimization_indexes.py  006_images_likes_avatar.py  007_refresh_tokens.py  008_karrot_ui_fields.py  009_remove_trust_score.py  010_purchases.py  011_purchase_unique_product.py  012_product_soft_delete.py  013_chat_image_messages.py  014_product_category_condition_dims.py
services/api/app/: config.py  main.py
services/api/app/middleware/: auth.py  idempotency.py  logging.py
services/api/app/models/: __init__.py  asset_image.py  base.py  capture_session.py  chat.py  enums.py  idempotency_key.py  model_asset.py  model_asset_file.py  product.py  product_like.py  purchase.py  refresh_token.py  user.py
services/api/app/repositories/: asset_image_repo.py  chat_repo.py  idempotency_repo.py  model_asset_repo.py  product_like_repo.py  product_repo.py  purchase_repo.py  refresh_token_repo.py  user_repo.py
services/api/tests/: conftest.py  test_ar_asset.py  test_auth.py  test_chat.py  test_chat_read.py  test_e2e_seller_flow.py  test_google_oauth.py  test_health.py  test_jwt_auth.py  test_likes.py  test_product_management.py  test_products.py  test_publish_flow.py  test_purchases.py  test_request_id.py  test_storage_security.py  test_upload_flow.py  test_websocket.py
(+160 files in other folders)
